tried to fix incident edges